fixed margins on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2137,9 +2137,9 @@ button,
     flex-shrink: 0;
     display: block;
     margin: 0 0 2em 4em;
-    width: 50%; }
+    width: 50%}
     #banner .image img {
-      height: 100%;
+      height: auto;
       -moz-object-fit: cover;
       -webkit-object-fit: cover;
       -ms-object-fit: cover;
@@ -2148,7 +2148,9 @@ button,
       -webkit-object-position: center;
       -ms-object-position: center;
       object-position: center;
-      width: 100%; }
+      width: 70%; 
+      margin-left: auto;
+      margin-right: auto;}
   @media screen and (orientation: portrait) {
     #banner {
       -moz-flex-direction: column-reverse;
@@ -2176,7 +2178,7 @@ button,
         -webkit-flex-shrink: 0;
         -ms-flex-shrink: 0;
         flex-shrink: 0;
-        margin: 0 0 4em 0;
+        margin: 0 0 4em 0em;
         height: 25em;
         max-height: 50vh;
         min-height: 18em;
